[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fault-injection"
version = "0.1.0"
description = "Lightweight fault injection helpers for Python functions."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["fault-injection", "testing", "resilience", "chaos-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[tool.setuptools.packages.find]
include = ["fault_injection*"]
